[flake8]
exclude = docs
ignore = E203,W293,W503,E402
max-line-length = 88

[metadata]
name = earth2mip
version = 23.5.25

[tool:pytest]
norecursedirs = .git external
addopts = -vv -r xfXs
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
asyncio_mode=auto

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
python_requires = >=3.7
include_package_data = true
install_requires =
    setuptools >= 38.4  # For pkg_resources
    pydantic[dotenv] >= 1.10
    datapane >= 0.16.0
    cfgrib >= 0.9.10.3
    xskillscore >= 0.0.24
    pytest-regtest
    timm
    torch_harmonics
    einops
    typer
    wandb
    ruamel.yaml
    timm
    einops
    dask-mpi
    pangeo_forge_recipes
    wandb
    bokeh < 3
    cdsapi >= 0.6.1
    s3fs
    fsspec
    pytest-asyncio >= 0.21.0

setup_requires =
	setuptools >= 38.4
