[flake8]
exclude = docs
ignore = E203,W293,W503,E402
max-line-length = 88

[metadata]
name = earth2mip
version = 23.5.25

[tool:pytest]
norecursedirs = .git external
addopts = -vv -r xfXs
markers =
    slow: marks tests as slow (deselect with '-m "not slow"')
asyncio_mode=auto

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
python_requires = >=3.7
include_package_data = True
install_requires =
    altair>=4.2.2
    cdsapi >= 0.6.1
    cfgrib >= 0.9.10.3
    cftime
    dask>=2023.1.0
    distributed>=2023.1.0
    eccodes>=1.4.0
    ecmwflibs>=0.5.2
    einops
    fsspec
    h5py>=3.2.0
    h5netcdf>=1.0.0
    importlib_metadata>=6.7.0
    joblib>=1.1.0
    netCDF4>=1.6.4
    numpy
    nvidia-modulus @ git+https://github.com/nvidia/modulus.git#egg=ea5d2c35998ad0c1c00407b0ecd2bf6049aef5e7",
    onnxruntime-gpu>=1.15.1
    pandas>=1.5.3
    properscoring>=0.1
    pydantic >= 1.10, <=1.10.11
    pytest-asyncio >= 0.21.0
    pytest-regtest
    pytest>=7.0.0
    s3fs
    setuptools >= 38.4  # For pkg_resources
    torch>=1.13
    torch_harmonics>=0.5.0
    tqdm>=4.65.0
    typer
    xarray
    xskillscore >= 0.0.24
    zarr>=2.14.2

setup_requires =
	setuptools >= 38.4

[options.entry_points]
earth2mip.networks =
    fcn = earth2mip.networks.fcn:load
    dlwp = earth2mip.networks.dlwp:load
    pangu = earth2mip.networks.pangu:load
    pangu_6 = earth2mip.networks.pangu:load_6
    pangu_24 = earth2mip.networks.pangu:load_24
    fcnv2_sm = earth2mip.networks.fcnv2_sm:load
    graphcast = earth2mip.networks.graphcast:load_time_loop
    graphcast_operational = earth2mip.networks.graphcast:load_time_loop_operational
    graphcast_small = earth2mip.networks.graphcast:load_time_loop_small


[options.extras_require]
graphcast =
    jax>=0.4.16
    graphcast @ https://github.com/deepmind/graphcast/archive/e622a15c1b9742d78f9b662f2af262604d58c204.tar.gz
    gcsfs>=2023.6.0
